static/css/styles.css
.container img {
  max-width: 100%;
}

@font-face {
  font-family: 'DisketMono';
  src: url('../fonts/Disket-Mono-Regular.woff2') format('woff2'),
  url('../fonts/Disket-Mono-Regular.woff') format('woff');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'DisketMono';
  src: url('../fonts/Disket-Mono-Bold.woff2') format('woff2'),
  url('../fonts/Disket-Mono-Bold.woff') format('woff');
  font-weight: Bold;
  font-style: normal;
}

body {
  font-family: 'Karla', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  padding: 0 !important;
  margin-left: 0 !important;
  margin-right: 0 !important;
  margin-bottom: 0 !important;
  width: 100% !important;
  max-width: 100% !important;
  overflow-x: hidden;
  background-color: rgba(255, 72, 4) !important;
  font-size: large;
}

.navbar, .footer, h1, h2, h3 {
  font-family: 'DisketMono', 'Karla', sans-serif;
}

h1 {
  font-weight: bold;
}

header {
  text-align: center;
  justify-content: center;
  max-width: 100% !important;
}

#otsikko {
  font-size: 300%;
  font-weight: 300;
}

.bg-primary {
  background-color: transparent !important;
  /*background: url("../images/SubwayGIF.gif");*/
  background-size: cover;
  width: 100%;
  margin: 0 !important;
  padding: 18% 9% 9% 9% !important;
  max-width: 100% !important;
}

#background-video {
  width: 100vw;
  height: 100vh;
  object-fit: cover;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: -1;
}

@media (max-width: 750px) {
  #background-video {
    height: 70vh;
  }
}

@media (max-width: 450px) {
  #background-video {
    height: 50vh;
  }
}

.credit {
  position: relative;
  width: 100%;
  /*margin-bottom: -2.3%;*/
}

.creditText {
  position: absolute;
  font-size: x-small;
  right: 0;
}


section {
  padding: 50px 2% 50px 2%;
  text-align: center;
  width: 100%;
  max-width: 100% !important;
}

.container {
  margin: auto;
  padding: 0 !important;
  text-align: center;
  max-width: 100% !important;
}

.logo-container {
  max-width: 820px !important;
  padding: 0;
}

.bg-dark {
  background-color: rgba(255, 72, 4) !important;
  color: white;
  text-transform: uppercase;
  width: 100%;
  max-width: 100% !important;
}

.grey-section {
  background: #f0f0f0;
  padding: 25px 2% 25px 2%;
}

.white-section {
  background: white;
  padding: 25px 2% 25px 2%;
}

.orange-text {
  color: rgba(255, 72, 4);
}

.blue-text {
  color: rgba(6, 91, 215);
}

.text-align-center {
  display: flex;
  text-align: center;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#countdown {
  font-family: 'DisketMono', 'Karla', sans-serif;
  background-color: rgba(255, 72, 4);
  color: white;
  font-size: 175%;
  text-align: center;
  bottom: 0;
  position: fixed;
  width: 100%;
  z-index: 1;
  opacity: 100%;
}

#somet {
  font-size: 200%;
}

.row-custom {
  margin-left: 0;
  margin-right: 0;
}

.event-image-wrapper {
  margin-top: 1rem;
  display: grid;
  justify-content: center;
  align-items: center;
}

.event-image {
  width: 800px;
}

.filter {
  position: relative;
}

.filter::before {
  content: "";
  display: block;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  position: absolute;
  pointer-events: none;
  mix-blend-mode: screen;
}

.filter-blue::before {
  background: rgba(6, 91, 215);
}

.filter-orange::before {
  background: rgba(255, 72, 4);
}

.instagram-section {
  padding: 2% !important;
}

.instagram-embed {
  align-items: center;
  justify-content: center;
}
iframe {
  margin: 0 !important;
}

@media screen and (max-width: 450px) {
  body {
    margin: 15% 0 0 !important;
    max-width: 100% !important;
  }
}

.imgcontainer {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  flex-wrap: wrap;
}

.companyLogo {
  padding: 5%;
  padding-bottom: 40px;
}

@media (max-width: 475px) {
  footer.py-5 {
    padding-bottom: 25% !important;
  }
}

.big-link {
  font-size: x-large;
}

.overlay-text {
  font-family: 'DisketMono', 'Karla', sans-serif;
  font-weight: bold;
  font-style: italic;
  position: absolute;
  top: 75%;
  left: 73%;
  transform: translate(-50%, -50%);
  color: #0068f5; 
  font-size: min(6vw, 60px);
  text-align: center;
  -webkit-text-stroke: 0.05em white;
}

.container h1,h2,h3,h4,h5,p {
  padding-bottom: 0.5em;
}

.main-content {
  max-width: 1200px;
}

